# db-llm-finetune

./: .gitignore  README.md  download.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
notebooks/: 00_finetune_basic.ipynb  01_finetune_simple.ipynb  02_finetune_phi2.ipynb
notebooks/runpod/: 00_finetune_phi2.ipynb  01_finetune_phi2.ipynb  config.py
scripts/: run_ruff_fix.sh  runpod_setup.sh
src/: config.py  utils.py
